--- a/website/package.json
+++ b/website/package.json
@@ -11,10 +11,13 @@
     "@mdi/font": "^3.6.95",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "github-markdown-css": "^3.0.1",
     "roboto-fontface": "*",
+    "showdown": "^1.9.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
-    "vuetify": "^2.1.0"
+    "vuetify": "^2.1.0",
+    "vuetify-markdown-editor": "^1.1.2"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
